@@ -17,6 +17,11 @@ module Sunlight
       end
     end
     
+    # Convenience method for getting out the youtube_id from the youtube_url
+    def youtube_id
+      /http:\/\/(?:www\.)?youtube\.com\/(?:user\/)?(.*?)\/?$/.match(youtube_url)[1] unless youtube_url.nil?
+    end
+    
     # Get the committees the Legislator sits on
     #
     # Returns:
